# kakutils-rs

./: Cargo.toml  README.adoc
kakplugin/: Cargo.toml
kakplugin/src/: errors.rs  lib.rs  types.rs
src/: box_.rs  errors.rs  incr.rs  invert.rs  join.rs  kak.rs  keep_every.rs  main.rs  math_eval.rs  pad.rs  rev.rs  set.rs  shuf.rs  sort.rs  stdin.rs  trim.rs  uniq.rs  utils.rs  xargs.rs  xlookup.rs
