[package]
name = "rust-selection-sort"
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "README.adoc"
keywords = ["cli", "kakoune"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
clap = {version = "3", features = ["derive"]}
alphanumeric-sort = "1"

[profile.release]
lto = true
opt-level = "z"
