# syntax = denzp/cargo-wharf-frontend

# cargo-features = ["strip"]
[package]
name = "kakutils-rs"
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "README.adoc"
keywords = ["cli", "kakoune"]

[workspace]
members = [
    ".",
    "./kakplugin/",
]

[[package.metadata.wharf.binary]]
name = "kakutils-rs"
destination = "/bin/kakutils-rs"

[package.metadata.wharf.builder]
# image = "rust"
# image = "ekidd/rust-musl-builder"
image = "clux/muslrust:nightly-2021-03-02"
target = "x86_64-unknown-linux-musl"

[package.metadata.wharf.output]
image = "scratch"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
clap = { version = "4", features = ["derive", "env"] }
alphanumeric-sort = "1"
# shellwords = {version = "1", path = "../../../git/rust-shellwords/"}
# shellwords = "1"
rand = "0.8"
evalexpr = "7"
kakplugin = {path = "./kakplugin/"}
linked-hash-map = "0.5.4"
linked_hash_set = "0.1.4"
strum_macros = "0.24"
strum = { version = "0.24", features = ["derive"] }
itertools = "0.10.5"
either = "1.8.1"

[profile.release]
lto = true
opt-level = "z"
strip = true
codegen-units = 1
panic = "abort"
